<!--
  ~ Copyright (c) 2021 Arnold Muiruri
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Remotive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="company_logo">Company Logo</string>
    <string name="bookmark_this_job">Bookmark this job</string>
    <string name="job_details">Job Details</string>
    <string name="bookmark">Bookmark</string>
    <string name="company_name">Company Name</string>
    <string name="job_description" tools:ignore="ExtraTranslation">Freelance work is defining developer careers in exciting new ways.
        If you’re passionate about finding rapid career growth potential working
        with leading Fortune 500 brands and innovative Silicon Valley startups,
        Top could be a great fit for your next career shift.Top is an elite
        talent network made up of the world’s top 3% of developers, connecting the
        best and brightest freelancers with top organizations. Unlike a 9-to-5
        job, you’ll choose your own schedule and work from anywhere.</string>
    <string name="job_overview">Job Overview</string>
    <string name="apply_now">Apply Now</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="job_listing">Jobs</string>
    <string name="saved_jobs">Saved Jobs</string>
</resources>