<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021 Arnold Muiruri
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_career_details"
    tools:context=".ui.careerDetails.CareerDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topBar"
            style="@style/StatusBarBackground.Remotive"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/status_bar_color"
            android:elevation="16dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/job_details_menu"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:navigationIconTint="@color/normal_text_color">

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/job_details"
                android:textColor="@color/normal_text_color" />
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/image_view_company_logo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/company_logo"
                android:scaleType="centerCrop"
                tools:src="@drawable/logo" />

            <TextView
                android:id="@+id/text_view_job_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="@color/normal_text_color"
                android:textSize="23sp"
                tools:text="Snr Data Analyst(Developer)" />

            <TextView
                android:id="@+id/text_view_company_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/company_name"
                android:textAlignment="center"
                android:textColor="@color/title_text_color"
                android:textSize="15sp"
                tools:text="Google, Worldwide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/job_overview"
                android:textColor="@color/title_text_color"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/text_view_job_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/job_overview"
                android:textColor="@color/normal_text_color"
                android:textSize="15sp"
                tools:text="-Job type: Full-time" />

            <TextView
                android:id="@+id/text_view_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/job_overview"
                android:textColor="@color/normal_text_color"
                android:textSize="15sp"
                tools:text="-Salary: $50k-$300k USD per year" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/description"
                android:textColor="@color/title_text_color"
                android:textSize="20sp"
                tools:text="Description" />

            <TextView
                android:id="@+id/text_view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_light"
                android:text="@string/job_description"
                android:textColor="@color/normal_text_color"
                android:textSize="15sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_apply"
                style="@style/TextAppearance.Remotive.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/title_text_color"
                android:text="@string/apply_now"
                android:textAllCaps="false"
                android:textSize="18sp"

                />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>